VACMS-8359: - fixed image and container height on tablet and small screens

--- a/src/platform/site-wide/sass/modules/_m-homepage-blog.scss
+++ b/src/platform/site-wide/sass/modules/_m-homepage-blog.scss
@@ -1,11 +1,17 @@
 .homepage-blog {
   &__image {
+    height: 100%;
+
     img {
       width: 100%;
       height: 350px;
       object-fit: cover;
-      object-position: center;
+      object-position: top;
       display: block;
+
+      @media (min-width: $small-screen) {
+        height: 100%;
+      }
     }
   }
 
